<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">AnyMemo</string>
    <string name="app_full_name">AnyMemo</string>
    <string name="website_versions_view">https://anymemo.org/versions-view</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancel</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="back_menu_text">Back</string>
    <string name="detail_menu_text">Detail</string>
    <string name="settings_menu_text">Settings</string>
...
    <string name="undo_fail_text">Unable to undo</string>
    <string name="undo_fail_message">You can only undo 1 card.</string>
    <string name="recent_databases">Recent databases</string>
    <string name="option_button_text">Options</string>
    <string name="about_button_text">About</string>
    <string name="help_button_text">Help</string>
    <string name="edit_button_text">Preview/edit</string>
    <string name="copyclipboard">Copy to clipboard</string>
    <string name="copyclipboard_summary">Automatically copy card content to clipboard.</string>
    <string name="memo_show_answer">Show answer</string>
    <string name="memo_show_hint">Hint</string>
    <string name="memo_no_item_title">No item</string>
    <string name="memo_no_item_message">There is no item to learn for now. If you want to cram, you can do quizzes by long clicking a db in the &quot;Recent&quot; tab.</string>
...
    <string name="settings_html_display">Display in HTML</string>
    <string name="settings_ratio">Q/A display ratio</string>
    <string name="settings_wipe">Wipe all learning progress</string>
    <string name="settings_shuffle">Shuffle all cards</string>
    <string name="add_screen_hint">Hint</string>
    <string name="settings_inverse">Swap the Q/A of all cards</string>
    <string name="settings_save">Save</string>
    <string name="warning_text">Warning</string>
    <string name="settings_wipe_warning">ALL learning progress will be reset!</string>
    <string name="settings_shuffle_warning">This operation will shuffle all cards and can NOT be undone.</string>
    <string name="settings_inverse_warning">This operation will swap the location of question and answer. Swap&amp;dup will add all swapped cards to the back of current database instead of replacing.</string>
    <string name="delete_warning">Do you really want to delete this card?</string>
    <string name="skip_text">Skip</string>
...
