<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    cardview:cardCornerRadius="4dp">
...
            android:layout_height="wrap_content"
            android:layout_below="@+id/rv_mc_option4"
            android:text="Option4"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/rv_mc_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rv_mc_option4"
            android:text="Answer"
            android:textColor="#ff33b5e5"
            android:textSize="13sp" />
...
