<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mc_study_activity_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context="org.liberty.android.fantastischmemo.ui.multipleChoice.MCStudyActivity">

        <TextView
            android:id="@+id/mc_text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ID: " />

        <TextView
            android:id="@+id/mc_text_view_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mc_text_view_id"
            android:layout_marginBottom="16dp"
            android:text="Score: 0" />

        <TextView
            android:id="@+id/mc_text_view_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mc_text_view_score"
            android:layout_marginBottom="16dp"
            android:text="Question appear over here.\nQuestion appear over here.\nQuestion appear over here.\nQuestion appear over here."
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/mc_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mc_text_view_question">

            <RadioButton
                android:id="@+id/mc_radio_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Option 1" />

            <RadioButton
                android:id="@+id/mc_radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Option 2" />

            <RadioButton
                android:id="@+id/mc_radio_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Option 3" />

            <RadioButton
                android:id="@+id/mc_radio_button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Option 4" />

        </RadioGroup>

        <TextView
            android:id="@+id/mc_text_view_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mc_radio_group"
            android:layout_marginTop="16dp"
            android:textColor="#ff33b5e5" />

        <Button
            android:id="@+id/mc_button_confirm_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mc_text_view_message"
            android:layout_marginTop="16dp"
            android:text="Confirm" />

    </RelativeLayout>
</ScrollView>